# portagenty

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  PROPOSAL-claude-code-history-bridge.md  README.md  ROADMAP.md  SECURITY.md  bacon.toml  portagenty.portagenty.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml
docs/: .gitignore  astro.config.mjs  package.json
docs/agent-context/: 2026-04-21-portaconv-integration-plan.md
docs/scripts/: serve.mjs  smoke.mjs
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: index.md  index.mdx  portaconv-integration.mdx
docs/src/content/docs/getting-started/: completions.md  dev.md  installation.md  quickstart.md  termux.md
docs/src/content/docs/reference/: commands.md  schema.md  snippets.md
snippets/: pa-aliases.sh  termux-friendly.sh
src/: clipboard.rs  lib.rs  main.rs  scaffold.rs  workspace_edit.rs
src/cli/: mod.rs
src/config/: discovery.rs  files.rs  merge.rs  mod.rs
src/domain/: mod.rs  project.rs  session.rs  workspace.rs
src/export/: mod.rs
src/find/: fd.rs  locate.rs  mod.rs  recency.rs  shell.rs  walk.rs  zoxide.rs
src/mux/: mod.rs  sanitize.rs  session_info.rs  tmux.rs  zellij.rs
src/onboarding/: mod.rs
src/protocol/: mod.rs  register.rs
src/snippets/: mod.rs
src/state/: mod.rs
src/tui/: app.rs  confirm.rs  edit.rs  find.rs  footer.rs  help.rs  mod.rs  picker.rs  view.rs
tests/: cli.rs  config_load.rs  mux_tmux_e2e.rs  mux_zellij_e2e.rs  termux_render.rs
