[package]
name = "portagenty"
version = "0.0.1"
edition = "2021"
rust-version = "1.82"
description = "Portable, terminal-native launcher for agent workspaces."
authors = ["cybersader"]
license = "MIT"
repository = "https://github.com/cybersader/portagenty"
homepage = "https://cybersader.github.io/portagenty"
keywords = ["tui", "tmux", "agents", "workspace", "launcher"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "pa"
path = "src/main.rs"

[lib]
name = "portagenty"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = "1.41"
rstest = "0.23"
mockall = "0.13"
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
serial_test = "3.2"
scopeguard = "1.2"
tempfile = "3.14"

[features]
default = []
# Enables end-to-end tests against a real tmux server. CI runs these on
# Linux + macOS; the default dev loop skips them for speed.
tmux-e2e = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
